--- a/alembic.ini
+++ b/alembic.ini
@@ -19,7 +19,7 @@ qualname =
 [logger_sqlalchemy]
 level = WARN
 handlers =
-qualname = sqlalchemy.engine
+qualname = sqlalchemy.eng
 
 [logger_alembic]
 level = INFO
